@@ -11,25 +11,19 @@
   <description>Java wrapper and integrator for Claude CLI</description>
 
   <licenses>
-      <license>
-          <name>MIT License</name>
-          <url>https://opensource.org/licenses/MIT</url>
-          <distribution>repo</distribution>
-      </license>
+    <license>
+      <name>MIT License</name>
+      <url>https://opensource.org/licenses/MIT</url>
+      <distribution>repo</distribution>
+    </license>
   </licenses>
 
-  <scm>
-      <connection>scm:git:https://github.com/sudoitir/claudecode4j.git</connection>
-      <developerConnection>scm:git:ssh://git@github.com:sudoitir/claudecode4j.git</developerConnection>
-      <url>https://github.com/sudoitir/claudecode4j</url>
-  </scm>
-
   <developers>
-      <developer>
-          <id>sudoitir</id>
-          <name>Mahdi Amirabdollahi</name>
-          <email>dev@sudoit.ir</email>
-      </developer>
+    <developer>
+      <id>sudoitir</id>
+      <name>Mahdi Amirabdollahi</name>
+      <email>dev@sudoit.ir</email>
+    </developer>
   </developers>
 
   <modules>
@@ -43,6 +37,12 @@
     <module>claudecode4j-websocket-adapter</module>
     <module>claudecode4j-mcp-server</module>
   </modules>
+
+  <scm>
+    <connection>scm:git:https://github.com/sudoitir/claudecode4j.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com:sudoitir/claudecode4j.git</developerConnection>
+    <url>https://github.com/sudoitir/claudecode4j</url>
+  </scm>
 
   <properties>
     <revision>1.0.0-SNAPSHOT</revision>
@@ -183,15 +183,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>${maven-gpg-plugin.version}</version>
-          <executions>
-            <execution>
-              <id>sign-artifacts</id>
-              <goals>
-                <goal>sign</goal>
-              </goals>
-              <phase>verify</phase>
-            </execution>
-          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -199,7 +190,30 @@
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
             <argLine>--enable-preview</argLine>
+            <excludedGroups>e2e</excludedGroups>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.5.4</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+            <includes>
+              <include>**/*IntegrationTest.java</include>
+            </includes>
+            <excludes>
+              <exclude>**/*E2ETest.java</exclude>
+            </excludes>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -260,29 +274,24 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.1.2</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
       <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.2</version>
-          <configuration>
-              <skip>true</skip>
-          </configuration>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <version>0.9.0</version>
+        <extensions>true</extensions>
+        <configuration>
+          <publishingServerId>central</publishingServerId>
+        </configuration>
       </plugin>
       <plugin>
-          <groupId>org.sonatype.central</groupId>
-          <artifactId>central-publishing-maven-plugin</artifactId>
-          <version>0.9.0</version>
-          <extensions>true</extensions>
-          <configuration>
-              <publishingServerId>central</publishingServerId>
-              <tokenAuth>true</tokenAuth>
-          </configuration>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
@@ -302,18 +311,6 @@
             <artifactId>spotless-maven-plugin</artifactId>
             <configuration>
               <java>
-                <cleanthat>
-                    <version>2.8</version>
-                    <sourceJdk>${maven.compiler.source}</sourceJdk>
-                    <mutators>
-                        <mutator>SafeAndConsensual</mutator>
-                        <mutator>LiteralsFirstInComparisons</mutator>
-                    </mutators>
-                    <excludedMutators>
-                        <excludedMutator>OptionalNotEmpty</excludedMutator>
-                    </excludedMutators>
-                    <includeDraft>false</includeDraft>
-                </cleanthat>
                 <includes>
                   <include>src/main/java/**/*.java</include>
                   <include>src/test/java/**/*.java</include>
@@ -335,6 +332,62 @@
                   <file>${maven.multiModuleProjectDirectory}/license-header</file>
                 </licenseHeader>
               </java>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>integration</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>all</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--enable-preview</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <phase>verify</phase>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <configuration>
+              <skip>false</skip>
             </configuration>
           </plugin>
         </plugins>
